# Group56_work_text_editor

./: CMakeLists.txt  README.md  main.cpp
